--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-=
+
     <link rel="stylesheet" type="text/css" href="./dist/main.css">
 
     <title>The Sea Organ</title>
     
 </head>
 <body>
+    <h1>The Sea Organ - Index</h1>
+
+
+
 
     <div id="app"></div>
     <script src="./dist/main.js"></script>
-
-    
 </body>
 </html>
