Add audio samples flute, bassoon, french horn

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <link rel="stylesheet" type="text/css" href="./dist/main.css">
+    <!-- UI Thin Progress Bar -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.css"
+        integrity="sha256-pMhcV6/TBDtqH9E9PWKgS+P32PVguLG8IipkPyqMtfY=" crossorigin="anonymous" />
+
 
     <title>The Sea Organ</title>
     
@@ -18,5 +21,63 @@
 
     <div id="app"></div>
     <script src="./dist/main.js"></script>
+    <!-- Build audio interface -->
+    <script type="text/javascript" src="./src/scripts/NexusUI.js"></script>
+    <!-- Progress Bar -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.js"
+        integrity="sha256-a5YRB27CcBwBFcT5EF/f3E4vzIqyHrSR878nseNYw64=" crossorigin="anonymous"></script>
+    <!-- Tone Audio Synthesis -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.0.1/Tone.min.js"></script>
+
+    <script>
+        NProgress.start();
+        // load samples //
+        var samples = SampleLibrary.load({
+            instruments: ['piano', 'bass-electric', 'bassoon', 'cello', 'clarinet', 'contrabass', 'flute', 'french-horn', 'guitar-acoustic', 'guitar-electric', 'guitar-nylon', 'harmonium', 'harp', 'organ', 'saxophone', 'trombone', 'trumpet', 'tuba', 'violin', 'xylophone'],
+            baseUrl: "/tonejs-instruments/samples/"
+        })
+        // show keyboard on load //
+        var current
+        Tone.Buffer.on('load', function () {
+            document.querySelector(".container").style.display = 'block';
+            document.querySelector("#loading").style.display = 'none';
+            NProgress.done();
+            // loop through instruments and set release, connect to master output
+            for (var property in samples) {
+                if (samples.hasOwnProperty(property)) {
+                    console.log(samples[property])
+                    samples[property].release = .5;
+                    samples[property].toMaster();
+                }
+            }
+            current = samples['piano'];
+            select.on('change', function (v) {
+                current = samples[v.value];
+            })
+        })
+        Tone.Buffer.on('error', function () {
+            document.querySelector("#loading").innerHTML = "I'm sorry, there has been an error loading the samples. This demo works best on on the most up-to-date version of Chrome.";
+        })
+        // create Nexus UI //
+        Nexus.colors.accent = "#f00"
+        var select = new Nexus.Select('#Selector', {
+            'size': [300, 30],
+            'options': Object.keys(samples)
+        });
+        var keyboardUI = new Nexus.Piano('#Keyboard', {
+            'size': [1000, 125],
+            'mode': 'button', // 'button', 'toggle', or 'impulse'
+            'lowNote': 36,
+            'highNote': 72
+        })
+        keyboardUI.on('change', function (note) {
+            console.log(Tone.Frequency(note.note, "midi").toNote());
+            if (note.state === true) {
+                current.triggerAttack(Tone.Frequency(note.note, "midi").toNote());
+            } else if (note.state === false) {
+                current.triggerRelease(Tone.Frequency(note.note, "midi").toNote());
+            }
+        })
+    </script>
 </body>
 </html>
