Add instruments folder

--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
 
     <div id="app"></div>
     <script src="./dist/main.js"></script>
+    
     <!-- Build audio interface -->
-    <script type="text/javascript" src="./src/scripts/NexusUI.js"></script>
+    <script type="text/javascript" src="./src/scripts/nexusUI.js"></script>
     <!-- Progress Bar -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.js"
         integrity="sha256-a5YRB27CcBwBFcT5EF/f3E4vzIqyHrSR878nseNYw64=" crossorigin="anonymous"></script>
     <!-- Tone Audio Synthesis -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.0.1/Tone.min.js"></script>
+    instruments
+    <script type="text/javascript" src="./src/scripts/instruments.js"></script>
 
     <script>
         NProgress.start();
