--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h1>Play Music</h1>
 <p>Click anywhere to play sound.</p>
 
-<!-- <button value="play" class="eq"></button> -->
+<button value="play-button" class="eq">Play</button>
 
     <div id="app"></div>
     <script src="./dist/main.js"></script>
