Add effects to audio

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <!-- Keybaoard -->
     <script type="text/javascript" src="./src/scripts/keyboard.js"></script>
 
-        <script type="text/javascript" src="./src/scripts/song.js"></script>
+        <!-- <script type="text/javascript" src="./src/scripts/song.js"></script> -->
 
-    <!-- <script type="text/javascript" src="./src/scripts/loop.js"></script> -->
+    <script type="text/javascript" src="./src/scripts/loop.js"></script>
 
 </body>
 </html>
