--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
 <div class="eq">
 </div>
 
-<h1>Play Music</h1>
-<p>Click anywhere to play sound.</p>
+    <h1>Play Music</h1>
+    <p>Click anywhere to play sound.</p>
 
-<button value="play-button" class="eq">Play</button>
+    <button value="play-button" class="eq">Play</button>
 
+    <!-- KEEP FOR APP -->
     <div id="app"></div>
     <script src="./dist/main.js"></script>
 
