Modified filters in loop.js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     
-    <h1>The Sea Organ - Index</h1>
+    <h1>seaOrganOf</h1>
 
 <div id="dropdown-container">
 </div>
@@ -26,10 +26,8 @@
 <div class="eq">
 </div>
 
-    <h1>Play Music</h1>
-    <p>Click anywhere to play sound.</p>
 
-    <button value="play-button" class="eq">Play</button>
+
 
     <!-- KEEP FOR APP -->
     <div id="app"></div>
@@ -40,8 +38,6 @@
   
 
     <!-- <script type="text/javascript" src="./src/scripts/song.js"></script> -->
-
-    <!-- <script type="text/javascript" src="./src/scripts/loop.js"></script> -->
 
 </body>
 </html>
