Fixed option values in dropdown

--- a/index.html
+++ b/index.html
@@ -26,13 +26,92 @@
     
     <h1>seaOrganOf</h1>
 
-    <div id="dropdown-container"></div>
+    <div id="dropdown-container">
+        <select id="station_id">
+            <option value="None">-- Select U.S. Tides & Currents Station --</option>
+            <option value="cb0102">Cape Henry LB 2CH - VA</option>
+            <option value="cb0201">York Spit LBB 22 - VA</option>
+            <option value="cb0301">Thimble Shoal LB 18 - VA</option>
+            <option value="cb0402">Naval Station Norfolk LB 7 - VA</option>
+            <option value="cb0601">Newport News Channel LB 14 - VA</option>
+            <option value="cb0701">Dominion Terminal - VA</option>
+            <option value="cb0801">Rappahannock Shoal Channel LBB 60 - VA</option>
+            <option value="cb0901">Potomac River MidChannel LWB B - VA</option>
+            <option value="cb1001">Cove Point LNG Pier - VA</option>
+            <option value="cb1101">Chesapeake Channel LBB 92 - VA</option>
+            <option value="cb1201">Tolchester Front Range - VA</option>
+            <option value="cb1301">Chesapeake City - VA</option>
+            <option value="cc0201">Aransas Pass LB6 - TX</option>
+            <option value="cc0301">Port Aransas, Channel View - TX</option>
+            <option value="cc0401">Oxy Oil and Gas CM - TX</option>
+            <option value="cp0101">Cherry Point - WA</option>
+            <option value="db0301">Philadelphia - PA</option>
+            <option value="db0502">Delaware Bay Channel LB 10 - DE</option>
+            <option value="g06010">Galveston Bay Entr Channel LB 11 - TX</option>
+            <option value="g08010">Fred Hartman Br., Houston Ship Channel - TX</option>
+            <option value="g09010">Galveston Channel, west end - TX</option>
+            <option value="gl0101">Cuyahoga River - OH</option>
+            <option value="gl0201">Maumee River - OH</option>
+            <option value="hb0201">Humboldt Bay Entrance Channel LB 9 - CA</option>
+            <option value="hb0401">Chevron Pier - CA</option>
+            <option value="jx0302">Mile Point LB 20 - FL</option>
+            <option value="jx0401">Fulton Cutoff LB 34 - FL</option>
+            <option value="jx0501">Dames Point Bridge - FL</option>
+            <option value="jx0601">Trout River Cut LB 64 - FL</option>
+            <option value="jx0701">Acosta Bridge - FL</option>
+            <option value="lc0101">Calcasieu Channel LB 36 - LA</option>
+            <option value="lc0201">Calcasieu Pass, Cameron Fishing Pier - LA</option>
+            <option value="lc0301">Lake Charles City Docks - LA</option>
+            <option value="lm0101">First Street Wharf - LA</option>
+            <option value="lm0201">Port Allen - LA</option>
+            <option value="mb0301">Mobile State Dock Pier E - AL</option>
+            <option value="mb0401">Mobile Container Terminal - AL</option>
+            <option value="mc0101">Atchafalaya Bar Channel - LA</option>
+            <option value="mg0101">Matagorda Ship Channel Marker 19 - TX</option>
+            <option value="mg0201">Matagorda Entrance Channel - TX</option>
+            <option value="mi0101">Miami LB M - FL</option>
+            <option value="mi0201">Miami LB1 - FL</option>
+            <option value="mi0301">Miami LB3 - FL</option>
+            <option value="n03020">The Narrows - NY/NJ</option>
+            <option value="nb0301">Quonset Point - RI</option>
+            <option value="nl0101">Groton, Thames River, Pier 6 - CT</option>
+            <option value="s06010">Martinez-AMORCO Pier - CA</option>
+            <option value="s08010">Southampton Shoal Channel LB 6 - CA</option>
+            <option value="s09010">Oakland Outer Harbor LB3 - CA</option>
+            <option value="s10010">Oakland Inner Harbor LB4 - CA</option>
+            <option value="sn0101">Sabine Bank Channel LBB 34 - TX</option>
+            <option value="sn0201">USCG Sabine - TX</option>
+            <option value="sn0301">Sabine Front Range - TX</option>
+            <option value="sn0401">West Port Arthur Bridge - TX</option>
+            <option value="sn0501">Rainbow Bridge - TX</option>
+            <option value="sn0601">Port of Beaumont - TX</option>
+            <option value="sn0701">Port Arthur - TX</option>
+            <option value="t01010">Sunshine Skyway Bridge - FL</option>
+            <option value="t02010">Old Port Tampa - FL</option>
+            <option value="t03010">Port Manatee - FL</option>
+        </select>
+        <br>
+        <button type="submit" id="select-button">Play The Sea</button>
+
+    </div>
     
     <div class="eq"></div>
 
 
+
+
     <!-- KEEP FOR APP -->
     <div id="app"></div>
+
+    <script>
+        let button = document.getElementById("select-button");
+        button.addEventListener("click", function getSelectedValue() {
+            var e = document.getElementById("station_id");
+            var result = e.options[e.selectedIndex].value;
+            return result;
+        });
+    </script>
+
     <script src="./dist/main.js"></script>
 
     <script src="https://cdn.rawgit.com/mohayonao/web-audio-api-shim/master/build/web-audio-api-shim.min.js"></script>
