Adjustments to submit button, still displaying value

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
                     <option value="8771341">Delaware Bay Channel LB 10 - DE</option>
                     <option value="8726607">Sunshine Skyway Bridge - FL</option>
                     <option value="8726384">Old Port Tampa - FL</option>
-                    <option value="">Port Manatee - FL</option>
                     <option value="8761198">Humboldt Bay Entrance Channel LB 9 - CA</option>
                     <option value="8720219">Fulton Cutoff LB 34 - FL</option>
                     <option value="8768094">Acosta Bridge - FL</option>
@@ -68,7 +67,7 @@
                     <option value="8545240">Cherry Point - WA</option>
                 </select>
                 <br>
-                <input type="submit" id="select-button">Play The Sea</button>
+                <input type="submit" id="select-button"></button>
             </div>
 
     </form>
