Updated and reduced stations

--- a/index.html
+++ b/index.html
@@ -31,40 +31,28 @@
     <form>
         <div id="dropdown-container">
                 <select id="station_id">
-                    <option value="">-- Select U.S. Tides & Currents Station --</option>
-                    <option value="None">-- Select U.S. Tides & Currents Station --</option>
-                    <option value="8637722">Cape Henry LB 2CH - VA</option>
-                    <option value="8537079">Naval Station Norfolk LB 7 - VA</option>
-                    <option value="8632837">Dominion Terminal - VA</option>
-                    <option value="8577188">Potomac River MidChannel LWB B - VA</option>
-                    <option value="8573927">Cove Point LNG Pier - VA</option>
-                    <option value="8573364">Chesapeake Channel LBB 92 - VA</option>
-                    <option value="8573927">Tolchester Front Range - VA</option>
-                    <option value="8774230">Chesapeake City - VA</option>
-                    <option value="9414711">Southampton Shoal Channel LB 6 - CA</option>
-                    <option value="9414711">Oakland Outer Harbor LB3 - CA</option>
-                    <option value="9415102">Groton, Thames River, Pier 6 - CT</option>
-                    <option value="8771341">Delaware Bay Channel LB 10 - DE</option>
-                    <option value="8726607">Sunshine Skyway Bridge - FL</option>
-                    <option value="8726384">Old Port Tampa - FL</option>
-                    <option value="8761198">Humboldt Bay Entrance Channel LB 9 - CA</option>
-                    <option value="8720219">Fulton Cutoff LB 34 - FL</option>
-                    <option value="8768094">Acosta Bridge - FL</option>
-                    <option value="8768094">Calcasieu Channel LB 36 - LA</option>
-                    <option value="8767816">Calcasieu Pass, Cameron Fishing Pier - LA</option>
-                    <option value="1611347">First Street Wharf - LA</option>
-                    <option value="8737048">Port Allen - LA</option>
-                    <option value="8773146">Atchafalaya Bar Channel - LA</option>
-                    <option value="8454049">The Narrows - NY/NJ</option>
-                    <option value="8551762">Philadelphia - PA</option>
-                    <option value="8773146">Matagorda Ship Channel Marker 19 - TX</option>
-                    <option value="8775237">Aransas Pass LB6 - TX</option>
-                    <option value="8770520">West Port Arthur Bridge - TX</option>
-                    <option value="8722588">Rainbow Bridge - TX</option>
-                    <option value="8770475">Port of Beaumont - TX</option>
-                    <option value="8771341">Fred Hartman Br., Houston Ship Channel - TX</option>
-                    <option value="9449424">Oxy Oil and Gas CM - TX</option>
-                    <option value="8545240">Cherry Point - WA</option>
+                    <option value="" selected>-- Select U.S. Tides & Currents Station --</option>
+                    <option value="8737048">Mobile State Dock Pier E - AL</option>
+                    <option value="9414764">Oakland Inner Harbor LB4 - CA</option>
+                    <option value="9414317">Pier 22, San Francisco - CA</option>
+                    <option value="9410660">Los Angeles - CA</option>
+                    <option value="8726607">Old Port Tampa - FL</option>
+                    <option value="8726384">Port Manatee - FL</option>
+                    <option value="9759197">Miami Beach - FL</option>
+                    <option value="8767816">Lake Charles City Docks - LA</option>
+                    <option value="8761927">New Orleans - LA</option>
+                    <option value="1611347">Port Allen - LA</option>
+                    <option value="8518750">The Battery, New York City - NY</option>
+                    <option value="8545240">Philadelphia - PA</option>
+                    <option value="8454049">Quonset Point - RI</option>
+                    <option value="8775083">Aransas Pass LB6 - TX</option>
+                    <option value="8775237">Port Aransas, Channel View - TX</option>
+                    <option value="8771341">Galveston Bay Entr Channel LB 11 - TX</option>
+                    <option value="8770475">Port Arthur - TX</option>
+                    <option value="8638999">Cape Henry LB 2CH - VA</option>
+                    <option value="8637722">York Spit LBB 22 - VA</option>
+                    <option value="8573927">Chesapeake Channel LBB 92 - VA</option>
+                    <option value="9447130">Seattle - WA</option>
                 </select>
                 <br>
                 <input type="submit" id="select-button"></button>
