Added flex display to css

--- a/index.html
+++ b/index.html
@@ -47,17 +47,14 @@
                 <option value="8518750">The Battery, New York City - NY</option>
                 <option value="8545240">Philadelphia - PA</option>
                 <option value="8454049">Quonset Point - RI</option>
-                <option value="8775083">Aransas Pass LB6 - TX</option>
-                <option value="8775237">Port Aransas, Channel View - TX</option>
-                <option value="8771341">Galveston Bay Entr Channel LB 11 - TX</option>
+                <option value="8771013">Galveston Bay - TX</option>
+                <option value="8775296">Corpus Christi Bay - TX</option>
                 <option value="8770475">Port Arthur - TX</option>
-                <option value="8638999">Cape Henry LB 2CH - VA</option>
-                <option value="8637722">York Spit LBB 22 - VA</option>
+                <option value="8637689">Yorktown - VA</option>
                 <option value="8573927">Chesapeake Channel LBB 92 - VA</option>
                 <option value="9447130">Seattle - WA</option>
                 <option value="8443970">Boston - MA</option>
                 <option value="8594900">Washington D.C.</option>
-            </select>
                 <br>
                 <input type="submit" id="select-button"></button>
             </div>
