Added logo, fixed favicon

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <option value="1612340">Honolulu - HI</option>
                 <option value="8767816">Lake Charles City Docks - LA</option>
                 <option value="8761927">New Orleans - LA</option>
+                <option value="8443970">Boston - MA</option>
                 <option value="8575512">Annapolis - MD</option>
                 <option value="8418150">Portland - ME</option>
                 <option value="8518750">The Battery, New York City - NY</option>
@@ -53,7 +54,7 @@
                 <option value="8637689">Yorktown - VA</option>
                 <option value="8573927">Chesapeake Channel LBB 92 - VA</option>
                 <option value="9447130">Seattle - WA</option>
-                <option value="8443970">Boston - MA</option>
+                <option value="8594900">Washington D.C.</option>
                 <option value="8594900">Washington D.C.</option>
                 <br>
                 <input type="submit" id="select-button"></button>
@@ -63,10 +64,12 @@
 
     </div>
 
-   
-    
-    
+
     <div class="eq"></div>
+
+    <footer>
+        <img src="https://sea-organ-seeds.s3.amazonaws.com/images/aA-JSP-logo-v3.png" alt="seaOrganOf" id="footer-logo">
+    </footer>
 
 
 
