Fixes to dropdown and submit button

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <!-- DROPDOWN CONTAINER FOR STATIONS -->
     <form>
         <div id="dropdown-container">
-            <select id="station_id">
-                <option value="" selected>-- Select U.S. Tides & Currents Station --</option>
+            <select id="station_id" class="select-css">
+                <option value="" selected>Select U.S. Coastal Station</option>
                 <option value="8737048">Mobile State Dock Pier E - AL</option>
                 <option value="9414290">San Francisco - CA</option>
                 <option value="9410660">Los Angeles - CA</option>
@@ -55,9 +55,9 @@
                 <option value="8573927">Chesapeake Channel LBB 92 - VA</option>
                 <option value="9447130">Seattle - WA</option>
                 <option value="8594900">Washington D.C.</option>
-                <option value="8594900">Washington D.C.</option>
+
                 <br>
-                <input type="submit" id="select-button"></button>
+                <input type="submit" id="select-button">
             </div>
 
     </form>
