--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
  <h1>seaOrganOf</h1>
     
     <!-- DROPDOWN CONTAINER FOR STATIONS -->
-    <form>
-        <div id="dropdown-container">
+        <form id="dropdown-container">
             <select id="station_id" class="select-css">
                 <option value="" selected>Select U.S. Coastal Station</option>
                 <option value="8737048">Mobile State Dock Pier E - AL</option>
@@ -57,10 +56,13 @@
                 <option value="8594900">Washington D.C.</option>
 
                 <br>
-                <input type="submit" id="select-button">
-            </div>
+                <!-- <button type="submit" id="select-button">Submit</button> -->
 
-    </form>
+                <input type="button" value="Submit" name="submit"  id="select-button">
+
+                <!-- <input type="submit" id="select-button"> -->
+            </form>
+
 
     </div>
 
@@ -68,7 +70,7 @@
     <div class="eq"></div>
 
     <footer>
-        <img src="https://sea-organ-seeds.s3.amazonaws.com/images/aA-JSP-logo-v3.png" alt="seaOrganOf" id="footer-logo">
+        <img src="https://sea-organ-seeds.s3.amazonaws.com/images/aA-JSP-logo-v4.png" alt="seaOrganOf" id="footer-logo">
     </footer>
 
 
