Refactoring and prepping code for audio viz

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 
     </div>
 
-
+    <canvas class="viz-canvas"></canvas>
+<div class="loader"></div>
     <div class="eq"></div>
 
     <footer>
@@ -77,7 +78,7 @@
 
     <!-- KEEP FOR APP -->
     <div id="app"></div>
-
+    <script src="./src/scripts/viztest.js"></script>
     <script src="./dist/main.js"></script>
 
     <script src="https://cdn.rawgit.com/mohayonao/web-audio-api-shim/master/build/web-audio-api-shim.min.js"></script>
