Remove legacy dropdown

--- a/index.html
+++ b/index.html
@@ -68,12 +68,18 @@
 
     <canvas class="viz-canvas"></canvas>
 <div class="loader"></div>
+
+
     <div class="eq"></div>
 
     <footer>
+        <!-- <details open>
+            <summary>About The Sea Organ</summary>
+            <p>Title</p>
+            <div>IDescirption.</div>
+        </details> -->
         <img src="https://sea-organ-seeds.s3.amazonaws.com/images/aA-JSP-logo-v5.png" alt="seaOrganOf" id="footer-logo">
     </footer>
-
 
 
     <!-- KEEP FOR APP -->
