Developing audio viz

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 
     </div>
 
-    <canvas class="viz-canvas"></canvas>
-<div class="loader"></div>
+    <canvas id="viz-canvas"></canvas>
+
+    <div class="loader"></div>
 
 
     <div class="eq"></div>
