--- a/index.html
+++ b/index.html
@@ -66,7 +66,15 @@
 
     </div>
 
-    <canvas id="viz-canvas"></canvas>
+    <canvas id="viz-canvas">
+        
+    </canvas>
+
+    <tone-content>
+        <tone-oscilloscope></tone-oscilloscope>
+        <tone-fft></tone-fft>
+        <tone-play-toggle></tone-play-toggle>
+    </tone-content>
 
     <div class="loader"></div>
 
