Add StartAudioContext for iOS

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
                 <option value="8594900">Washington D.C.</option>
 
                 <br>
-                <!-- <button type="submit" id="select-button">Submit</button> -->
-
-                <input type="button" value="Submit" name="submit"  id="select-button">
+                <input type="button" value="Play" name="submit" id="select-button">
 
                 <!-- <input type="submit" id="select-button"> -->
             </form>
