Experiment with drawCircles

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                 <!-- <input type="submit" id="select-button"> -->
             </form>
             
-            <canvas>
+            <!-- <canvas>
                 
                 <tone-content id="tone-viz">
                     <tone-oscilloscope></tone-oscilloscope>
                     <tone-fft></tone-fft>
                     <tone-play-toggle></tone-play-toggle>
                 </tone-content>
-            </canvas>
-            <!-- <canvas id="viz-canvas"> </canvas> -->
+            </canvas> -->
+            <canvas id="viz-canvas"> </canvas>
 
     </div>
 
