Trying regular Web Audio API implementation

--- a/index.html
+++ b/index.html
@@ -61,15 +61,12 @@
 
                 <!-- <input type="submit" id="select-button"> -->
             </form>
-            
-            <!-- <canvas>
+<!--             
                 
-                <tone-content id="tone-viz">
-                    <tone-oscilloscope></tone-oscilloscope>
-                    <tone-fft></tone-fft>
-                    <tone-play-toggle></tone-play-toggle>
-                </tone-content>
-            </canvas> -->
+            <tone-content id="tone-viz">
+                <tone-oscilloscope></tone-oscilloscope>
+                <tone-fft></tone-fft>
+            </tone-content> -->
             <canvas id="viz-canvas"> </canvas>
 
     </div>
