Experiment with p5.js

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <script src="https://cdn.rawgit.com/mohayonao/web-audio-api-shim/master/build/web-audio-api-shim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/1.0.0/fetch.min.js"></script>
   
+<script type="text/javascript" src="https://tonejs.github.io/build/r6/p5.Tone.min.js"></script>
 
     <!-- <script type="text/javascript" src="./src/scripts/song.js"></script> -->
 
