Update intro text and remove waveform

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             </section>
 
             <section class="intro-explanation">
-                seaOrganOf uses Tides & Currents data from NOAA to generate unique audio soundscapes for specific coastal stations around the U.S. 
-                The organ translates 24 hours of sea level data into a unique set of musical notes and plays them in sequence <br> <br>
-                Select a U.S. coastal station, then click Play Organ to begin listening.
+                <span id="blue-text">seaOrganOf</span><span> uses Tides & Currents data from NOAA to generate unique audio soundscapes for coastal stations around the United States.<br><br>
+                The organ translates 24 hours of sea level data into a unique set of musical notes and plays them in sequence. <br> <br>
+                Select a U.S. coastal station, then click Play Organ to begin listening.</span>
             </section>
 
             <canvas id="viz-canvas"> </canvas>
@@ -78,7 +78,7 @@
             <div class="eq"></div>
             
             <footer>
-                <img src="https://sea-organ-seeds.s3.amazonaws.com/images/aA-JSP-logo-v5.png" alt="seaOrganOf" id="footer-logo">
+                <img src="https://sea-organ-seeds.s3.amazonaws.com/images/aA-JSP-logo.png" alt="seaOrganOf" id="footer-logo">
             </footer>
             
             <div id="about-overlay" class="overlay">
