--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.0.1/Tone.min.js"></script>
     <script src="./src/scripts/tonejs-ui.js"></script>
 
-
     <title>The Sea Organ</title>
+    <meta name="description" content="Immersive generative sound project creating music from sea level data, using Tone.js">
+
     
 </head>
 <body>
