Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
     <title>The Sea Organ</title>
     <meta name="description" content="Immersive generative sound project creating music from sea level data, using Tone.js">
 
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47505629-6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-47505629-6');
+    </script>
+
 </head>
 <body>
     
