Improve intro explanation and styling

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/brands.css"
         integrity="sha256-hIzRfkDG8yoX/o/xO8mmqvlHMAOHQsUetvMFu3Fa/vY=" crossorigin="anonymous" />
 
-
-    
     <!-- Tone Audio Synthesis -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.0.1/Tone.min.js"></script>
 
@@ -70,7 +68,7 @@
                 <option value="8775296">Corpus Christi Bay - TX</option>
                 <option value="8770475">Port Arthur - TX</option>
                 <option value="8637689">Yorktown - VA</option>
-                <option value="8573927">Chesapeake Channel LBB 92 - VA</option>
+                <option value="8573927">Chesapeake Channel - VA</option>
                 <option value="9447130">Seattle - WA</option>
                 <option value="8594900">Washington D.C.</option>
             </select>
@@ -94,6 +92,11 @@
                 <span id="blue-text">seaOrganOf</span><span> uses Tides & Currents data from NOAA to generate unique audio soundscapes for coastal stations around the United States.<br><br>
                 The organ translates 24 hours of sea level data into a unique set of musical notes and plays them in sequence. <br> <br>
                 Select a U.S. coastal station, then click Play Organ to begin listening.</span>
+            </section>
+
+            <section class="audio-explanation">
+                Designed for Chrome on Desktop/Laptop. <br>
+                Audio best experienced with headphones. 
             </section>
 
             <canvas id="viz-canvas"> </canvas>
