--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     
     <div class="main-content-container">
 
-        <h1>seaOrganOf</h1>
+        <!-- <h1>seaOrganOf</h1> -->
+        <h1>seaOrgan<span id="of-blue">Of</span></h1>
     
         <!-- DROPDOWN CONTAINER FOR STATIONS -->
         <form id="dropdown-container">
@@ -89,8 +90,7 @@
             <section class="button-explanation"></section>
 
             <section class="intro-explanation">
-                <span id="blue-text">seaOrganOf</span><span> uses Tides & Currents data from NOAA to generate unique audio soundscapes for coastal stations around the United States.<br><br>
-                The organ translates 24 hours of sea level data into a unique set of musical notes and plays them in sequence. <br> <br>
+                <span id="blue-text">seaOrgan</span><span> uses Tides & Currents data from NOAA coastal stations to generate soundscapes specific to each location. The organ translates 24 hours of sea level data from the previous day into a unique set of musical notes, then plays these notes in sequence.<br> <br>
                 Select a U.S. coastal station, then click Play Organ to begin listening.</span>
             </section>
 
@@ -130,7 +130,7 @@
                         <br />
                         Source Data: <a href="https://tidesandcurrents.noaa.gov/web_services_info.html" target="_blank">NOAA</a></p>
                         <div id="about-footer">Best experienced with headphones. <br>
-                        (Audio optimized for desktop/laptop, disabled on iOS.)</div>
+                        (Audio optimized for Chrome desktop/laptop, disabled on iOS.)</div>
                 </div>
             </div>
 
