--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                     <h1>seaOrganOf</h1>
                     
                     <p>seaOrganOf is inspired by the<span><a href="https://www.youtube.com/watch?v=myV3E9uREuI" id="inner-overlay-link" target="_blank">Sea Organ of Zadar</a></span>in Croatia, which uses the movement of the seas to create ethereal, organ-like sounds.</p>
-                    <p>This project aims to create an immersive audio ecperience by using NOAA's tides & currents data for locations around the coastal U.S. to generate audio soundscapes specific to location. Select your location, click play and enjoy!
-                    </p>
+                    <p>This project creates an immersive audio experience by translating NOAA's tides & currents data into notes played in sequence using Tone.js. Each soundscape is specific to the individual day and location.</p>
+
                     
                     <p>Created by: <a href="https://www.glennmcclanan.com/" target="_blank">Glenn McClanan</a></p>
                     <span class="connect-list">
