Add tide and currents stations

--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
             <select id="station_id" class="select-css">
                 <option value="" selected>Select U.S. Coastal Station</option>
                 <option value="8737048">Mobile State Dock Pier E - AL</option>
+                <option value="8737048">Bridgeport - CT</option>
                 <option value="9414290">San Francisco - CA</option>
                 <option value="9410660">Los Angeles - CA</option>
                 <option value="8726607">Old Port Tampa - FL</option>
                 <option value="8726384">Port Manatee - FL</option>
                 <option value="8724580">Key West - FL</option>
+                <option value="8670870">Fort Pulaski - GA</option>
                 <option value="1612340">Honolulu - HI</option>
                 <option value="8767816">Lake Charles City Docks - LA</option>
                 <option value="8761927">New Orleans - LA</option>
@@ -64,7 +66,6 @@
                 <option value="8418150">Portland - ME</option>
                 <option value="8518750">The Battery, New York City - NY</option>
                 <option value="8545240">Philadelphia - PA</option>
-                <option value="8454049">Quonset Point - RI</option>
                 <option value="8771013">Galveston Bay - TX</option>
                 <option value="8775296">Corpus Christi Bay - TX</option>
                 <option value="8770475">Port Arthur - TX</option>
