Tweaks to index page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-
     <title>The Sea Organ | Immersive Audio Experience</title>
     <meta name="description"
         content="An immersive web app that utilizes tidal current data to generate location-specific, ambient soundscapes. Created by Glenn McClanan.">
@@ -22,7 +21,7 @@
     <meta property=”og:type” content="website" />
     <meta property=”og:site_name” content=”seaOrgan” />
 
-    <!-- TWITTER CARD IMAGE -->
+    <!-- TWITTER CARD -->
     <meta name="twitter:card" content="Sea Organ  Immersive Audio Experience">
     <meta name="twitter:site" content="@glennmcclanan">
     <meta name="twitter:title" content="seaOrgan">
@@ -31,8 +30,6 @@
     <meta name="twitter:creator" content="@glennmcclanan">
     <meta name="twitter:image" content="https://sea-organ-seeds.s3.amazonaws.com/images/seaOrgan-TwitterCard.jpg">
 
-
-
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/src/images/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/src/images/images/favicon/favicon-32x32.png">
@@ -40,7 +37,6 @@
     <link rel="manifest" href="/src/images/images/favicon/site.webmanifest">
 
     <!-- STYLING -->
-    
     <link rel="stylesheet" type="text/css" href="./dist/main.css">
 
     <link
