--- a/index.html
+++ b/index.html
@@ -99,15 +99,14 @@
             <div class="organ-buttons">
 
                 <div class="input-wrapper-play">
-                    <input type="button" value="Play Organ" name="submit" id="select-button" class="input-field">       
+                    <input type="button" value="Play Organ" name="submit" id="select-button" class="play-button">       
                 </div>
-
+<!-- 
                 <div class="input-wrapper-stop">
-                    <input type="button" value="Pause Organ" name="stop" id="stop-button" class="input-field">
-                </div>
+                    <input type="button" value="Pause Organ" name="stop" id="stop-button">
+                </div> -->
             </div>
         </form>
-
 
             <section class="button-explanation"></section>
 
