--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel=”canonical” href=”http://seaorgan.net/” />
 
     <!-- FACEBOOK CARD -->
-    <meta propoerty="og:title" content="Sea Organ Immersive Audio Experience" />
+    <meta property="og:title" content="Sea Organ Immersive Audio Experience" />
     <meta property=”og:url” content=”http://seaorgan.net/” />
     <meta property=”og:description” content=”seaOrgan uses Tides & Currents data from NOAA coastal stations to generate
         soundscapes specific to each location. The organ translates 24 hours of sea level data from the previous day into a
