Fix quote in og property

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <!-- FACEBOOK CARD -->
     <meta property="og:title" content="Sea Organ Immersive Audio Experience" />
     <meta property=”og:url” content=”http://seaorgan.net/” />
-    <meta property=”og:description” content=”seaOrgan uses Tides & Currents data from NOAA coastal stations to generate
+    <meta property=”og:description” content='seaOrgan uses Tides & Currents data from NOAA coastal stations to generate
         soundscapes specific to each location. The organ translates 24 hours of sea level data from the previous day into a
-        unique set of musical notes, then plays these notes in sequence.” />
+        unique set of musical notes, then plays these notes in sequence.' />
     <meta property=”og:image” content=”https://sea-organ-seeds.s3.amazonaws.com/images/seaOrgan-ogimage.jpg”/> 
     <meta property=”og:type” content="website" />
     <meta property=”og:site_name” content=”seaOrgan” />
