--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
 
     <title>The Sea Organ | Immersive Audio Experience</title>
     <meta name="description"
-        content="An immersive web app that utilizes tidal current data to generate location-specific, ambient soundscapes. Created by Glenn McClanan.">
-    <meta name=”robots” content=”index, follow”>
-    <link rel=”canonical” href=”http://seaorgan.net/” />
+        content='An immersive web app that utilizes tidal current data to generate location-specific, ambient soundscapes. Created by Glenn McClanan.'>
+    <meta name=”robots” content='index, follow'>
+    <link rel=”canonical” href='http://seaorgan.net/' />
 
     <!-- FACEBOOK CARD -->
-    <meta property="og:title" content="Sea Organ Immersive Audio Experience" />
-    <meta property=”og:url” content=”http://seaorgan.net/” />
+    <meta property="og:title" content='Sea Organ Immersive Audio Experience' />
+    <meta property=”og:url” content='http://seaorgan.net/' />
     <meta property=”og:description” content='seaOrgan uses Tides & Currents data from NOAA coastal stations to generate
         soundscapes specific to each location. The organ translates 24 hours of sea level data from the previous day into a
         unique set of musical notes, then plays these notes in sequence.' />
-    <meta property=”og:image” content=”https://sea-organ-seeds.s3.amazonaws.com/images/seaOrgan-ogimage.jpg”/> 
+    <meta property=”og:image” content='https://sea-organ-seeds.s3.amazonaws.com/images/seaOrgan-ogimage.jpg'/> 
     <meta property=”og:type” content="website" />
-    <meta property=”og:site_name” content=”seaOrgan” />
+    <meta property=”og:site_name” content='seaOrgan' />
 
     <!-- TWITTER CARD -->
-    <meta name="twitter:card" content="Sea Organ  Immersive Audio Experience">
-    <meta name="twitter:site" content="@glennmcclanan">
-    <meta name="twitter:title" content="seaOrgan">
+    <meta name="twitter:card" content='Sea Organ Immersive Audio Experience'>
+    <meta name="twitter:site" content='@glennmcclanan'>
+    <meta name="twitter:title" content='seaOrgan'>
     <meta name="twitter:description"
-        content="seaOrgan is an immersive audio-visual experience that uses Tides & Currents data from NOAA coastal stations to generate soundscapes specific to each location. ">
-    <meta name="twitter:creator" content="@glennmcclanan">
-    <meta name="twitter:image" content="https://sea-organ-seeds.s3.amazonaws.com/images/seaOrgan-TwitterCard.jpg">
+        content='seaOrgan is an immersive audio-visual experience that uses Tides & Currents data from NOAA coastal stations to generate soundscapes specific to each location.'>
+    <meta name="twitter:creator" content='@glennmcclanan'>
+    <meta name="twitter:image" content='https://sea-organ-seeds.s3.amazonaws.com/images/seaOrgan-TwitterCard.jpg'>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/src/images/images/favicon/apple-touch-icon.png">
