--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="description"
         content='An immersive web app that utilizes tidal current data to generate location-specific, ambient soundscapes. Created by Glenn McClanan.'>
     <meta name=”robots” content='index, follow'>
-    <link rel=”canonical” href='http://seaorgan.net/' />
+    <link rel=”canonical” href='https://seaorgan.net/' />
 
     <!-- FACEBOOK CARD -->
     <meta property="og:title" content='Sea Organ Immersive Audio Experience' />
-    <meta property=”og:url” content='http://seaorgan.net/' />
+    <meta property=”og:url” content='https://seaorgan.net/' />
     <meta property=”og:description” content='seaOrgan uses Tides & Currents data from NOAA coastal stations to generate
         soundscapes specific to each location. The organ translates 24 hours of sea level data from the previous day into a
         unique set of musical notes, then plays these notes in sequence.' />
