More meta data tweaks

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <meta name="description"
         content='An immersive web app that utilizes tidal current data to generate location-specific, ambient soundscapes. Created by Glenn McClanan.'>
     <meta name=”robots” content='index, follow'>
-    <link rel=”canonical” href='https://seaorgan.net/' />
+    <link rel=”canonical” href='https://seaorgan.net' />
 
     <!-- FACEBOOK CARD -->
     <meta property="og:title" content='Sea Organ Immersive Audio Experience' />
-    <meta property=”og:url” content='https://seaorgan.net/' />
-    <meta property=”og:description” content='seaOrgan uses Tides & Currents data from NOAA coastal stations to generate
-        soundscapes specific to each location. The organ translates 24 hours of sea level data from the previous day into a
-        unique set of musical notes, then plays these notes in sequence.' />
+    <meta property=”og:url” content='https://seaorgan.net' />
+    <meta property=”og:description” content='seaOrgan is an immersive audio app that uses Tides & Currents data from NOAA to generate
+        soundscapes specific to each coastal location. The project was created by Glenn McClanan.' />
     <meta property=”og:image” content='https://sea-organ-seeds.s3.amazonaws.com/images/seaOrgan-ogimage.jpg'/> 
     <meta property=”og:type” content="website" />
     <meta property=”og:site_name” content='seaOrgan' />
