--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <span id="blue-text">seaOrgan</span
         ><span>
           uses Tides & Currents data from NOAA coastal stations to generate
-          location-specific soundscapes. The organ translates.<br />
+          location-specific soundscapes.<br />
           <br />
           Select a coastal station, then click Play Organ to begin
           listening.</span
@@ -249,8 +249,10 @@
             >
           </p>
           <div id="about-footer">
-            Best experienced with headphones. <br />
-            (Audio optimized for Chrome desktop/laptop, disabled on iOS.)
+            Best experienced on Chrome desktop headphones. <br />
+            (Audio disabled on some mobile devices.) <br />
+            <br />
+            ©2021 Glenn McClanan. All Rights Reserved.
           </div>
         </div>
       </div>
